<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sleep Assistant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btStartRec">START</string>
    <string name="btStopRec">STOP</string>

    
    <string-array name="tabs">
        <item>Cycle</item>
        <item>Stats</item>

    </string-array>

    <string-array name="action_list">
        <item>Sleep Monitor</item>
        <item>Baby Monitor</item>
    </string-array>
    <string-array name="action_list_reversed">
        <item>Baby Monitor</item>
        <item>Sleep Monitor</item>
    </string-array>

    <string name="pref_cat_baby">Baby monitor</string>
    <string name="pref_parrent_number">Parent`s Number</string>
    <string name="btOK">OK</string>
    <string name="btCancel">Cancel</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="title_activity_radio">RadioActivity</string>
    <string name="bt_sleep">Sleep</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="bt_dismiss">DISMISS</string>
    <string name="bt_snooze">SNOOZE</string>
    <string name="title_activity_sleep">SleepActivity</string>
    <string name="chart_loading">Loading data...</string>
    <string name="tw_hours">Time</string>
    <string name="tw_quality">Quality</string>
    <string name="tw_in_bed">In bed</string>
    <string name="title_activity_settings">Settings</string>
    <string name="tw_deficit">Deficit</string>
    <string name="tw_nights_count">Nights</string>
    <string name="tw_avg_quality">Avg. quality</string>
    <string name="tw_m_deficit">Deficit</string>
    <string name="tw_timeinbed">Time in bed</string>
    <string name="tw_total">Total:</string>
    <string name="tw_month">Month:</string>
    <string name="pref_cat_sleep">Sleep Monitor</string>
    <string name="pref_volume">Volume</string>
    <string name="pref_melody">Melody</string>
    <string name="pref_length">Sleep length</string>
    <string name="pref_motion_sensi">Motion sensitivity</string>
    <string name="pref_micro">Microphone sensitivity</string>
    <string name="pref_time_ok">OK</string>
    <string name="pref_time_cancel">Cancel</string>
    <string name="pref_melody_sum">Set alarm melody/volume</string>
    <string name="pref_length_sum">Preferred length of sleep</string>
    <string name="pref_micro_sum">Set noise threshold</string>
    <string name="title_activity_calibration">CalibrationActivity</string>
    <string name="bt_calibrate">Calibrate</string>
    <string name="bt_cancel">Cancel</string>
    <string name="tw_calibration">Place your device on still surface(May take up to a minute)</string>

</resources>
