<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.bp.droppa.sleepassistant.sleep_monitor.FragmentCalendar">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:id="@+id/calendar" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:text="@string/tw_month"
                android:id="@+id/tw_month"
                android:layout_marginLeft="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:longClickable="false"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Time in bed"
                    android:id="@+id/tw_m_bed_time"

                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:longClickable="false"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/tw_mtib_val"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:longClickable="false"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tw_nights_count"
                    android:id="@+id/tw_m_nights"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:longClickable="false"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/tw_mn_val"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tw_avg_quality"
                    android:id="@+id/tw_m_quality"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/tw_mq_val"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tw_m_deficit"
                    android:id="@+id/tw_m_deficit"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/tw_md_val"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <View
                        android:layout_width="match_parent"

            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:text="@string/tw_total"
                android:id="@+id/tw_total"
                android:layout_marginLeft="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:longClickable="false"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tw_timeinbed"
                    android:id="@+id/tw_t_bed_time"

                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:longClickable="false"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/tw_ttib_val"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:longClickable="false"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tw_nights_count"
                    android:id="@+id/tw_t_nights"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:longClickable="false"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/tw_tn_val"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tw_avg_quality"
                    android:id="@+id/tw_tavg_quality"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/tw_tq_val"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tw_m_deficit"
                    android:id="@+id/tw_t_deficit"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/tw_td_val"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>

