<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.bp.droppa.sleepassistant.sleep_monitor.StatsActivity">

    <include android:id="@+id/app_bar" layout="@layout/app_bar_no_spinner" />

    <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView"
    >


<LinearLayout
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chartLayout"
        >


        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="3dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Awake"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Deep Sleep"
            android:id="@+id/textView3"
            android:layout_alignBottom="@+id/chart"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="5dp"
            android:layout_toLeftOf="@+id/chart"
            android:layout_toStartOf="@+id/chart" />


    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:longClickable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tw_in_bed"
            android:id="@+id/tw_in_bed"
            android:layout_margin="15dp"
            android:layout_weight="1"/>

        <TextView
            android:longClickable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/tw_in_bed_value"
            android:layout_margin="15dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <View

        android:layout_width="match_parent"

        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorAccent" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:longClickable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tw_quality"
            android:id="@+id/tw_quality"
            android:layout_margin="15dp"
            android:layout_weight="1"/>

        <TextView
            android:longClickable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/tw_quality_value"
            android:layout_margin="15dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <View

        android:layout_width="match_parent"

        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorAccent" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:longClickable="false">

        <TextView
            android:longClickable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tw_deficit"
            android:id="@+id/tw_deficit"
            android:layout_margin="15dp"
            android:layout_weight="1"/>

        <TextView
            android:longClickable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/tw_deficit_val"
            android:layout_margin="15dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <View

        android:layout_width="match_parent"

        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorAccent" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:longClickable="false">

        <TextView
            android:longClickable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tw_hours"
            android:id="@+id/tw_hours"
            android:layout_margin="15dp"
            android:layout_weight="1"/>

        <TextView
            android:longClickable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/tw_hours_value"
            android:layout_margin="15dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>




</LinearLayout>